--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ genshin = "^0.3.1"
 AnilistPython = "^0.1.3"
 yt-dlp = "^2023.2.17"
 youtube_dl = "^2021.12.17"
+aiosqlite = "^0.18.0"
 
 [tool.poetry.dev-dependencies]
 
